[gd_scene load_steps=4 format=3 uid="uid://b5a584lgtgr3v"]

[ext_resource type="Script" path="res://Scripts/enemies/enemy_base/enemy_base.gd" id="1_is2kv"]

[sub_resource type="Animation" id="Animation_5lule"]
resource_name = "Hit"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(0.809846, 0.133955, 0.207964, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_47nkk"]
_data = {
"Hit": SubResource("Animation_5lule")
}

[node name="EnemyBase" type="CharacterBody2D" groups=["Moveables"]]
collision_layer = 0
script = ExtResource("1_is2kv")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="HitboxCollisionShape" type="CollisionShape2D" parent="Hitbox"]

[node name="FloorCollisionShape" type="CollisionShape2D" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionRadius" type="CollisionShape2D" parent="DetectionArea"]

[node name="EffectPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_47nkk")
}

[node name="InvincibilityTimer" type="Timer" parent="." groups=["Moveables"]]
wait_time = 0.35
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
